# MAGNIFIER

./: .gitignore  CMakeLists.txt  README.md  product-requirements-magnifier.ru.md
resources/: app_icon.rc
src/: app.cpp  app.h  capture_engine.cpp  capture_engine.h  config.cpp  config.h  hotkey_manager.cpp  hotkey_manager.h  input_manager.cpp  input_manager.h  logger.cpp  logger.h  magnifier_window.cpp  magnifier_window.h  main.cpp  monitor_manager.cpp  monitor_manager.h  settings_dialog.cpp  settings_dialog.h  stop_magnifier.cpp  tracking_manager.cpp  tracking_manager.h  tray_icon.cpp  tray_icon.h
